--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,8 +1,9 @@
-FROM debian:bookworm
+FROM debian:bullseye
 
 ARG SETUP_MARIADB_DIR=/usr/local/bin
 
-RUN apt-get update && apt-get install -y mariadb-server
+RUN apt-get update && \
+	apt-get install -y mariadb-server
 
 EXPOSE 3306
 
@@ -10,4 +11,4 @@ COPY ./tool/mariadb_setup.sh ${SETUP_MARIADB_DIR}/
 
 RUN chmod +x ${SETUP_MARIADB_DIR}/mariadb_setup.sh
 
-ENTRYPOINT [ "bash" , "/usr/local/bin/mariadb_setup.sh"]
+ENTRYPOINT ["/usr/local/bin/mariadb_setup.sh"]
