--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,32 +1,30 @@
-events {}
+worker_processes 1;
+events {
+	# if we have 1 worker process able to serve 1024 clients
+	worker_connections 1024;
+}
 
 http {
-    upstream group1 {
-        server nodeapp1:3000;
-        server nodeapp2:3000;
-        server nodeapp3:3000;
-        server nodeapp4:3000;
-        server nodeapp5:3000;
-    }
-    
-    upstream group2 {
-        server nodeapp6:3000;
-        server nodeapp7:3000;
-        server nodeapp8:3000;
-        server nodeapp9:3000;
-        server nodeapp10:3000;
-    }
-    
-    server {
-        listen 3000;
-        location /group1 {
-            proxy_pass http://group1/;
-        }
-        location /group2 {
-            proxy_pass http://group2/;
-        }
-        location / {
-            proxy_pass http://group1/;  # Default
-        }
-    }
+	# HTTPs server block
+	server {
+		listen 443 ssl http2;
+		server_name _;
+		ssl_certificate /usr/certs/nginx-selfsigned.crt;
+		ssl_certificate_key /usr/certs/nginx-selfsigned.key;
+		ssl_protocols TLSv1.2 TLSv1.3;
+		location / {
+			root /usr/share/nginx/html;
+			index index.html;
+			try_files $uri $uri/ =404;
+		}
+	}
+
+	# Redirect all HTTP request to HTTPs
+	server {
+		listen 80;
+			server_name _;
+			location / {
+				return 301 https://$host$request_uri;
+			}
+		}
 }
